TC changes to Section 4 and final bit

--- a/jors2015.bib
+++ b/jors2015.bib
@@ -1,6 +1,6 @@
 @article {Moult2015,
 author = {Moult, John and Fidelis, Krzysztof and Kryshtafovych, Andriy and Schwede, Torsten and Tramontano, Anna},
-title = {Critical assessment of methods of protein structure prediction (CASP) — round x},
+title = {{Critical assessment of methods of protein structure prediction (CASP) --- round x}},
 journal = {Proteins: Structure, Function, and Bioinformatics},
 volume = {82},
 issn = {1097-0134},
@@ -36,6 +36,14 @@ year = {2017},
 
 }
 
+@Article{rrspecissue:2008,
+  author = 	 {Sergey Fomel and Jon F. Claerbout},
+  title = 	 {{Reproducible Research}},
+  journal = 	 {{Computing in Science \& Engineering }},
+  year = 	 {2008},
+  volume = 	 {11},
+  number = 	 {1}
+}
 
 @Book{ReproResearch2010,
   title =	 {Reproducible Research},
@@ -49,13 +57,13 @@ year = {2017},
 
 @ARTICLE{Bailey_setthe,
     author = {David Bailey and Jonathan Borwein and Victoria Stodden},
-    title = {Set the default to \"open\"},
-    journal = {Notices of the AMS},
+    title = {{Set the Default to ``Open''}},
+    journal = {{Notices of the AMS}},
     year = {2013},
 }
 
 
-@article{DBLP:journals/corr/JamesWS14,
+@TechReport{james-et-al:2014,
   author    = {Doug James and
                Nancy Wilkins{-}Diehr and
                Victoria Stodden and
@@ -111,15 +119,10 @@ year = {2017},
                Line Pouchard and
                Edward Seidel and
                Isuru Suriarachchi},
-  title     = {Standing Together for Reproducibility in Large-Scale Computing: Report
-               on reproducibility@XSEDE},
-  journal   = {CoRR},
-  volume    = {abs/1412.5557},
+  title     = {{Standing Together for Reproducibility in Large-Scale Computing: Report on reproducibility@XSEDE}},
+    institution =  {{XSEDE}},
   year      = {2014},
-  url       = {http://arxiv.org/abs/1412.5557},
-  timestamp = {Sun, 04 Sep 2016 11:55:16 +0200},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/JamesWS14},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
+  url       = {http://arxiv.org/abs/1412.5557}
 }
 
 @TechReport{collberg-et-al:2014,
@@ -511,7 +514,7 @@ journal = {Science}
 @INPROCEEDINGS{crick-et-al_wssspe2,
   author =      {Tom Crick and Benjamin A. Hall and Samin Ishtiaq},
   title =       {{``Can I Implement Your Algorithm?'': A Model for Reproducible Research Software}},
-  booktitle =   {{Proceedings of 2nd International Workshop on Sustainable Software for Science: Practice and Experiences (WSSSPE2)}},
+  booktitle =   {{2nd International Workshop on Sustainable Software for Science: Practice and Experiences (WSSSPE2)}},
   year =        {2014}
 }
 
