--- a/jors2015.tex
+++ b/jors2015.tex
@@ -142,7 +142,7 @@ software, better research~\cite{goble:2014}.
 However, there is promising existing work in this
 area~\cite{chirigati-et-al:2013,stodden+miguez:2014,stodden-et-al:2015,stodden-et-al:2016},
 with a variety of manifestos for reproducible research and community
-initiatives~\cite{gent:2013,fursin-et-al:2014,ReproResearch2010,Bailey_setthe,DBLP:journals/corr/JamesWS14},
+initiatives~\cite{rrspecissue:2008,gent:2013,fursin-et-al:2014,Bailey_setthe,james-et-al:2014},
 top tips and ``ten simple
 rules''~\cite{prlic+proctor:2012,masum-et-al:2013,sandve-et-al:2013,osborne-et-al:2013,goodman-et-al:2014,crick-et-al-irreprod:2015,list-et-al:2017},
 as well as analysis of the legal situation from a licensing and
@@ -622,9 +622,9 @@ Following the proposal of such a system, the question becomes:
 {\emph{how do we encourage widespread uptake, or even
 standardisation?}}  Such a service would appear to be non-trivial,
 given the large numbers of tools and workflows that could potentially
-require to be supported by the service. Furthermore, after such a
-service has been implemented, how do we ensure it is \emph{useful} and
-\emph{usable} for researchers.
+require to be supported by the service. After such a service has been
+implemented, how do we ensure it is \emph{useful} and \emph{usable}
+for researchers. Furthermore, how do we make it sustainable?
 
 The benefits to the wider computational research community from a
 cultural change to favour reproducibility are clear and as such we
@@ -655,34 +655,33 @@ estimated that a shift to becoming exclusively open access for a
 journal may lead to a ten-fold increase in computer science
 publication costs~\cite{vardi-cacm-2014}).
 
-Nevertheless, this proposed new cyberinfrastructure could have a
-profound impact on the way that computational science is performed,
+Nevertheless, this proposed new e-infrastructure could have a profound
+impact on the way that computational science is performed,
 repositioning the role of models, algorithms and benchmarks and
 accelerating the research cycle, perhaps truly enabling a ``fourth
 paradigm'' of data intensive scientific discovery~\cite{hey:2009}.
-Ultimately though, an open discussion and understanding of what
-reproducibility means for the wider computational science research
-community is important: we all need to explicitly state that this is
-worthwhile and address it, or don't bother doing it at all.
+Ultimately though, continuing with an honest and open discussion of
+what reproducibility means for the wider science research community is
+important: we all need to explicitly confirm that this is worthwhile
+and commit to addressing it, or don't bother doing it at all.
 
-\section{A note on rewriting the WSSSPE paper}
+\section*{A Note on Re-Writing the WSSSPE Paper}
 
-Many of the ideas, comments --- even attitudes --- in this paper come 
-from the authors' experience in programming, programming languages, 
-software. We have started from the Marc Andreessen 
-comment that opens this paper. In editing this paper from it's 
-original WSSSPE workshop form,  we realized that one assumption that 
-seems to run through the manuscript  is that the behaviours we think 
-are good are in fact those that can be enforced in software. 
-Take mutability of variables in programming as an example. Mutability 
-increases the scope for bugs, so modern programming languages like OCaml 
-or C++14 enforce immutability at the language or library level. But 
-in fact immutability leads very naturally to state-less or de novo
-build environments, and so to the guideline that "software must be compileable
-with de novo continuous integration". 
-And, similarly, so does the issue of openly publishing your tool chain:
-it too must be compileable in a from-scratch build environment to be of 
-use to anyone else. 
+Many of the ideas, comments --- even attitudes --- in this paper come
+from the authors' experience in programming, programming languages,
+software. We have started from the Marc Andreessen comment that opens
+this paper. In editing this paper from its original WSSSPE workshop
+form, we realised that one assumption that seems to run through the
+manuscript is that the behaviours we think are good are in fact those
+that can be enforced in software.  Take mutability of variables in
+programming as an example. Mutability increases the scope for bugs, so
+modern programming languages like OCaml or C++14 enforce immutability
+at the language or library level. But in fact immutability leads very
+naturally to state-less or de novo build environments, and so to the
+guideline that ``software must be compileable with de novo continuous
+integration''.  And, similarly, so does the issue of openly publishing
+your toolchain: it too must be compileable in a from-scratch build
+environment to be of use to anyone else.
 
 
 % BibTeX
