--- a/jors2015.tex
+++ b/jors2015.tex
@@ -628,7 +628,7 @@ for researchers. Furthermore, how do we make it sustainable?
 
 The benefits to the wider computational research community from a
 cultural change to favour reproducibility are clear and as such we
-should aim through software cyberinfrastructure and sharable,
+should aim through software e-infrastructure and sharable,
 community curated research workflows to mitigate these
 costs. Furthermore, we can reasonably expect the distinct needs of
 specific research communities to evolve over time, and initial
@@ -678,9 +678,9 @@ programming as an example. Mutability increases the scope for bugs, so
 modern programming languages like OCaml or C++14 enforce immutability
 at the language or library level. But in fact immutability leads very
 naturally to state-less or de novo build environments, and so to the
-guideline that ``software must be compileable with de novo continuous
+guideline that ``software must be compilable with de novo continuous
 integration''.  And, similarly, so does the issue of openly publishing
-your toolchain: it too must be compileable in a from-scratch build
+your toolchain: it too must be compilable in a from-scratch build
 environment to be of use to anyone else.
 
 
