--- a/jors2015.tex
+++ b/jors2015.tex
@@ -38,7 +38,7 @@
 \maketitle
 
 % Keywords:
-% reproducible research; cyberinfrastructure; scientific workflows; computational
+% reproducible research; e-infrastructure; scientific workflows; computational
 % science; open science; data sharing; code sharing; best practices
 
 
