--- a/jors2015.bib
+++ b/jors2015.bib
@@ -731,3 +731,24 @@ journal = {Science}
   number = 	 {e86}
 }
 
+@Article{boettiger:2015,
+  author = 	 {Carl Boettiger},
+  title = 	 {{An introduction to Docker for reproducible research}},
+  journal = 	 {{ACM SIGOPS Operating Systems Review}},
+  year = 	 {2015},
+  volume = 	 {49},
+  number = 	 {1},
+  pages = 	 {71-79},
+  note = 	 {{Special Issue on Repeatability and Sharing of Experimental Artifacts}}
+}
+
+@Article{haas:2016,
+  author = 	 {Charles N. Haas},
+  title = 	 {{Reproducible Risk Assessment}},
+  journal = 	 {{Risk Analysis}},
+  year = 	 {2016},
+  volume = 	 {36},
+  number = 	 {10},
+  pages = 	 {1829-1833},
+}
+
