--- a/jors2015.tex
+++ b/jors2015.tex
@@ -145,10 +145,10 @@ with a variety of manifestos for reproducible research and community
 initiatives~\cite{rrspecissue:2008,gent:2013,fursin-et-al:2014,Bailey_setthe,james-et-al:2014},
 top tips and ``ten simple
 rules''~\cite{prlic+proctor:2012,masum-et-al:2013,sandve-et-al:2013,osborne-et-al:2013,goodman-et-al:2014,crick-et-al-irreprod:2015,list-et-al:2017},
-as well as analysis of the legal situation from a licensing and
-copyright perspective~\cite{stodden:2008}. Things can, should and need
-to be much better if we want to uphold and maintain the scientific
-tenets of openness and sharing. Building upon previous
+as well as analysis of the wider legal, professional, ethical and risk
+perspectives~\cite{stodden:2008,haas:2016}. Things can, should and
+need to be much better if we want to uphold and maintain the
+scientific tenets of openness and sharing. Building upon previous
 work~\cite{crick-et-al_wssspe2,crick-et-al_recomp2014}, we present a
 call to action, along with a set of recommendations which we hope will
 lead to better, more sustainable, more re-useable software, to move
@@ -354,12 +354,17 @@ Citation Principles~\cite{smith-et-al:2016}.
 \end{figure}
 
 % (\url{http://www.phdcomics.com/comics.php?f=1689})
-The tweet in Figure~\ref{fig:overlyhonestmethod} is funny but
+The tweet in Figure~\ref{fig:overlyhonestmethod} is satirical but
 worryingly true, highlighting the perils of reproducible
 research. Often, the tool that the paper describes does not exist for
 download. Or runs only on one particular bespoke platform. Or might
 run for the author, for a while, but will `bit-rot' so quickly that
-even the author cannot compile it the following year.\\
+even the author cannot compile it the following year. Computational
+reproducibility would appear to be more straightforward than
+replicating physical experiments, but the complex and rapidly changing
+nature of computer systems and environments that are being used across
+different disciplines makes being able to reproduce and extend such
+work a serious challenge~\cite{boettiger:2015}.\\
 
 \noindent {\textbf{Recommendation {\textrm{VI}}:}} You must provide
 the source code of the tool, but also with details of precisely
