Final changes before re-submission

--- a/jors2015.bib
+++ b/jors2015.bib
@@ -752,3 +752,21 @@ journal = {Science}
   pages = 	 {1829-1833},
 }
 
+@Article{rrcise:2010,
+  title = 	 {{Reproducible Research}},
+  journal = 	 {{Computing in Science \& Engineering}},
+  year = 	 {2010},
+  volume = 	 {12},
+  number = 	 {5},
+  pages = 	 {8-13},
+}
+
+@TechReport{galiani-et-al:2017,
+  author = 	 {Sebastian Galiani and Paul Gertler and Mauricio Romero},
+  title = 	 {{Incentives for Replication in Economics}},
+  institution =  {{National Bureau of Economic Research}},
+  year = 	 {2017},
+  month = 	 {July},
+  note = 	 {NBER Working Paper No. 23576}
+}
+
