--- a/jors2015.tex
+++ b/jors2015.tex
@@ -105,8 +105,8 @@ you move onto the next project.
 
 There are various reasons why the wider scientific community is in
 this position. We are currently undergoing significant changes to
-models of academic dissemination, especially considering the open
-\{access,data,research\} movements, with new models being
+models of academic dissemination, especially considering the wider
+open research movement, with new models being
 proposed~\cite{deroure:2010,stodden-et-al:2013,fursin+dubach:2014}. Now,
 numerous ``high-impact'' journals explicitly require that source code
 and data is made available online under some form of open source
@@ -114,7 +114,10 @@ license, but there still exists large disciplinary gaps. While these
 initiatives are great, they are often optional, seem piecemeal, and do
 little to enable the verification and validation of scientific results
 at a later stage. Even within the same field, there are different
-ideas of what defines reproducibility~\cite{nasem:2016}.
+ideas of what defines reproducibility~\cite{nasem:2016}, as well as
+evidence of ``overturn bias'' -- replications that overturn original
+results are much easier to publish than those that confirm original
+results~\cite{galiani-et-al:2017}.
 
 Nevertheless, the reproduction and replication of reported scientific
 results has become a widely discussed topic within the scientific
@@ -142,7 +145,7 @@ software, better research~\cite{goble:2014}.
 However, there is promising existing work in this
 area~\cite{chirigati-et-al:2013,stodden+miguez:2014,stodden-et-al:2015,stodden-et-al:2016},
 with a variety of manifestos for reproducible research and community
-initiatives~\cite{rrspecissue:2008,gent:2013,fursin-et-al:2014,Bailey_setthe,james-et-al:2014},
+initiatives~\cite{rrspecissue:2008,rrcise:2010,gent:2013,fursin-et-al:2014,Bailey_setthe,james-et-al:2014},
 top tips and ``ten simple
 rules''~\cite{prlic+proctor:2012,masum-et-al:2013,sandve-et-al:2013,osborne-et-al:2013,goodman-et-al:2014,crick-et-al-irreprod:2015,list-et-al:2017},
 as well as analysis of the wider legal, professional, ethical and risk
